@@ -3,7 +3,6 @@ package us.dot.its.jpo.ode.api.accessors;
 import org.bson.Document;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -15,11 +14,13 @@ import us.dot.its.jpo.ode.api.models.AggregationResult;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public interface PageableQuery {
+
     /**
      * Find paginated data based on the given criteria and pageable object
      *
@@ -29,6 +30,7 @@ public interface PageableQuery {
      * @param pageable       the pageable object to use for pagination
      * @param criteria       the criteria object to use for querying
      * @param sort           the sort object to use for sorting
+     * @param outputType     the class type of the output
      * @return the paginated data that matches the given criteria
      */
     default <T> Page<T> findPage(
@@ -36,33 +38,55 @@ public interface PageableQuery {
             @Nonnull String collectionName,
             @Nonnull Pageable pageable,
             @Nonnull Criteria criteria,
-            @Nonnull Sort sort) {
-        MatchOperation matchOperation = Aggregation.match(criteria);
-        SortOperation sortOperation = Aggregation.sort(sort);
-        AggregationOperation facetOperation = context -> new Document("$facet",
-                new Document("metadata", List.of(new Document("$count", "count")))
-                        .append("results",
-                                Arrays.asList(
-                                        new Document("$skip", pageable.getPageNumber() * pageable.getPageSize()),
-                                        new Document("$limit", pageable.getPageSize()))));
+            @Nonnull Sort sort,
+            @Nullable List<String> excludedFields,
+            @Nonnull Class<T> outputType) {
+        List<String> fieldsToExclude = excludedFields != null ? excludedFields : Collections.emptyList();
 
-        Aggregation aggregation = Aggregation.newAggregation(matchOperation, sortOperation, facetOperation);
+        AggregationResult aggregationResult = getAggregationResult(mongoTemplate, collectionName, pageable, criteria,
+                sort, fieldsToExclude);
+        if (aggregationResult == null || aggregationResult.getMetadata().isEmpty()) {
+            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+        }
 
-        // Execute the aggregation
-        @SuppressWarnings("rawtypes")
-        AggregationResults<AggregationResult> results = mongoTemplate
-                .aggregate(aggregation, collectionName, AggregationResult.class);
+        // Convert Documents to our target type
+        List<T> data = new ArrayList<>();
+        for (Document result : aggregationResult.getResults()) {
+            List<T> results = result.getList("results", outputType);
+            if (results != null) {
+                data.addAll(results);
+            }
+        }
 
-        System.out.println("Results: " + results.getRawResults().toJson());
+        return new PageImpl<>(data, pageable, aggregationResult.getMetadata().getFirst().getCount());
+    }
 
-        // Extract the results
-        @SuppressWarnings("unchecked")
-        AggregationResult<T> result = results.getUniqueMappedResult();
+    /**
+     * Find paginated data based on the given criteria and pageable object
+     *
+     * @param mongoTemplate  the mongo template object to query with
+     * @param collectionName the collection name to query
+     * @param pageable       the pageable object to use for pagination
+     * @param criteria       the criteria object to use for querying
+     * @param sort           the sort object to use for sorting
+     * @return the paginated data that matches the given criteria
+     */
+    default Page<Document> findDocumentsWithPagination(
+            @Nonnull MongoTemplate mongoTemplate,
+            @Nonnull String collectionName,
+            @Nonnull Pageable pageable,
+            @Nonnull Criteria criteria,
+            @Nonnull Sort sort,
+            @Nullable List<String> excludedFields) {
+        List<String> fieldsToExclude = excludedFields != null ? excludedFields : Collections.emptyList();
+
+        AggregationResult result = getAggregationResult(mongoTemplate, collectionName, pageable, criteria, sort,
+                fieldsToExclude);
         if (result == null || result.getMetadata().isEmpty()) {
             return new PageImpl<>(Collections.emptyList(), pageable, 0);
         }
 
-        List<T> data = result.getResults();
+        List<Document> data = result.getResults();
         long totalElements = result.getMetadata().getFirst().getCount();
 
         return new PageImpl<>(data, pageable, totalElements);
@@ -71,29 +95,63 @@ public interface PageableQuery {
     /**
      * Wrap the given object in a page object. Intended to be used when applying a
      * limit of 1 to a query, while attempting to return a Paged response
-     * 
+     *
      * @param <T>    the type of the object to wrap
      * @param latest the object to wrap
      * @return a page object containing the given object
      */
     default <T> Page<T> wrapSingleResultWithPage(T latest) {
-        return new PageImpl<>(Collections.singletonList(latest));
+        List<T> resultList = new ArrayList<>();
+        if (latest != null) {
+            resultList.add(latest);
+        }
+        return new PageImpl<>(resultList);
     }
 
-    /**
-     * Create a pageable object based on the given page and size. If size is null,
-     * return null.
-     * 
-     * @param page the page number to use, nullable
-     * @param size the size of the page to use, nullable. If null, no pageable
-     *             object is returned
-     * @return a pageable object based on the given page and size, or null if either
-     *         is null
-     */
-    default Pageable createNullablePage(@Nullable Integer page, @Nullable Integer size) {
-        if (size == null) {
-            return null;
+    private static AggregationResult getAggregationResult(@Nonnull MongoTemplate mongoTemplate,
+            @Nonnull String collectionName,
+            @Nonnull Pageable pageable,
+            @Nonnull Criteria criteria,
+            @Nonnull Sort sort,
+            @Nonnull List<String> excludedFields) {
+
+        MatchOperation matchOperation = Aggregation.match(criteria);
+        SortOperation sortOperation = Aggregation.sort(sort);
+
+        // Create a facet operation that gets both results and count in one query
+        AggregationOperation facetOperation = context -> new Document("$facet",
+                new Document("metadata", List.of(new Document("$count", "count")))
+                        .append("results",
+                                Arrays.asList(
+                                        new Document("$skip", pageable.getPageNumber() * pageable.getPageSize()),
+                                        new Document("$limit", pageable.getPageSize()))));
+
+        // Add project operation if we need to exclude fields
+        Aggregation aggregation;
+        if (!excludedFields.isEmpty()) {
+            AggregationOperation projectOperation = context -> {
+                Document projectFields = new Document();
+                for (String field : excludedFields) {
+                    projectFields.append(field, 0); // Exclude the field by setting it to 0
+                }
+                return new Document("$project", projectFields);
+            };
+            aggregation = Aggregation.newAggregation(
+                    matchOperation,
+                    sortOperation,
+                    projectOperation,
+                    facetOperation);
+        } else {
+            aggregation = Aggregation.newAggregation(
+                    matchOperation,
+                    sortOperation,
+                    facetOperation);
         }
-        return PageRequest.of(page == null ? 0 : page, size);
+
+        // Execute the aggregation
+        AggregationResults<AggregationResult> results = mongoTemplate
+                .aggregate(aggregation, collectionName, AggregationResult.class);
+
+        return results.getUniqueMappedResult();
     }
 }
